# pylock-redis

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-branch.yml
src/pylock_redis/: __init__.py  backend.py  lock.py  retry.py
src/tests/: conftest.py  test_backend.py  test_lock.py
