[project]
name = "pylock-redis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis>=5.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]
test = [
    "fakeredis[lua]>=2.26.2",
    "pytest>=8.3.4",
]
